@@ -50,7 +50,7 @@ class NoPositionChangeReportTests {
     }
 
     @BeforeEach
-    public void setup() {
+    void setup() {
         listingDetails = new ListingDetails();
         listingDetails.setCaseTypeId(ENGLANDWALES_LISTING_CASE_TYPE_ID);
         ListingData listingData = new ListingData();
@@ -115,7 +115,7 @@ class NoPositionChangeReportTests {
         assertEquals("0", reportData.getReportSummary().getTotalMultipleCases());
         assertEquals(1, reportData.getReportDetailsSingle().size());
         assertTrue(reportData.getReportDetailsMultiple().isEmpty());
-        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().get(0);
+        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().getFirst();
         assertEquals("2500123/2021", reportDetail.getCaseReference());
         assertEquals(DATE_BEFORE_3MONTHS, reportDetail.getDateToPosition());
         assertEquals("test2", reportDetail.getCurrentPosition());
@@ -143,7 +143,7 @@ class NoPositionChangeReportTests {
         assertEquals("0", reportData.getReportSummary().getTotalMultipleCases());
         assertEquals(1, reportData.getReportDetailsSingle().size());
         assertTrue(reportData.getReportDetailsMultiple().isEmpty());
-        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().get(0);
+        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().getFirst();
         assertEquals("2500123/2021", reportDetail.getCaseReference());
         assertEquals(BASE_DATE.format(OLD_DATE_TIME_PATTERN2), reportDetail.getDateToPosition());
         assertEquals("test2", reportDetail.getCurrentPosition());
@@ -181,7 +181,7 @@ class NoPositionChangeReportTests {
         assertEquals("1", reportData.getReportSummary().getTotalMultipleCases());
         assertTrue(reportData.getReportDetailsSingle().isEmpty());
         assertEquals(1, reportData.getReportDetailsMultiple().size());
-        NoPositionChangeReportDetailMultiple reportDetail = reportData.getReportDetailsMultiple().get(0);
+        NoPositionChangeReportDetailMultiple reportDetail = reportData.getReportDetailsMultiple().getFirst();
         assertEquals("2500123/2021", reportDetail.getCaseReference());
         assertEquals(DATE_BEFORE_3MONTHS, reportDetail.getDateToPosition());
         assertEquals("test4", reportDetail.getCurrentPosition());
@@ -212,7 +212,7 @@ class NoPositionChangeReportTests {
         assertEquals("0", reportData.getReportSummary().getTotalMultipleCases());
         assertEquals(1, reportData.getReportDetailsSingle().size());
         assertTrue(reportData.getReportDetailsMultiple().isEmpty());
-        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().get(0);
+        NoPositionChangeReportDetailSingle reportDetail = reportData.getReportDetailsSingle().getFirst();
         assertEquals("2500123/2021", reportDetail.getCaseReference());
         assertEquals(DATE_BEFORE_3MONTHS, reportDetail.getDateToPosition());
         assertEquals("test7", reportDetail.getCurrentPosition());
